--- a/WebClassExtension/package.json
+++ b/WebClassExtension/package.json
@@ -1,8 +1,8 @@
 {
   "name": "webclass_extension",
-  "version": "1.0.0",
+  "version": "0.5.2",
   "description": "",
-  "main": "js/content.js",
+  "main": "js/background.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
